add some swagger examples
