# storage/api-docs/api-docs.json
@@ -1,28 +1,83 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "L5 OpenApi Makwa",
-        "description": "L5 Swagger OpenApi description",
-        "version": "1.2.0"
+        "title": "Makwa Modules's API",
+        "contact": {
+            "name": "sameh taha",
+            "email": "smta0@yahoo.com"
+        },
+        "license": {
+            "name": "Developed by sameh taha",
+            "url": "https://www.linkedin.com/in/ahmed-gad-60141a122/"
+        },
+        "version": "1.9.0"
     },
     "paths": {
-        "/": {
+        "/aindex": {
             "get": {
-                "description": "Home page",
+                "summary": "list products",
+                "operationId": "App\\Http\\Controllers\\ExampleController::index",
+                "parameters": [
+                    {
+                        "name": "first_name",
+                        "in": "path",
+                        "description": "Tags to filter by customer name",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "customer_id",
+                        "in": "query",
+                        "description": "Tags to filter by customer name",
+                        "style": "form",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
                 "responses": {
-                    "default": {
-                        "description": "Welcome page"
+                    "200": {
+                        "description": "A list with products"
+                    },
+                    "400": {
+                        "description": "Invalid tag value"
+                    },
+                    "404": {
+                        "description": "not found"
                     }
                 }
             }
         },
-        "/index": {
-            "get": {
-                "description": "Home page",
-                "operationId": "App\\Http\\Controllers\\ExampleController::index",
+        "/bpach": {
+            "post": {
+                "summary": "list products",
+                "operationId": "App\\Http\\Controllers\\ExampleController::post",
                 "responses": {
-                    "default": {
-                        "description": "Welcome page"
+                    "200": {
+                        "description": "A list with products"
+                    }
+                }
+            }
+        },
+        "/cpach": {
+            "put": {
+                "summary": "add products",
+                "operationId": "App\\Http\\Controllers\\ExampleController::put",
+                "responses": {
+                    "200": {
+                        "description": "A list with products"
+                    }
+                }
+            }
+        },
+        "/dindex": {
+            "delete": {
+                "summary": "list products",
+                "operationId": "App\\Http\\Controllers\\ExampleController::delete",
+                "responses": {
+                    "200": {
+                        "description": "A list with products"
                     }
                 }
             }
